Dragons part three
Bump version

--- a/mod/r3v/main/index.html
+++ b/mod/r3v/main/index.html
@@ -10,11 +10,11 @@
 </head>
 <body>
 <div id="main">
-	<a href="/" id="logo"><small><span class="blue">r</span>3<span class="blue">v</span></small><span class="blue">M</span>axx <small class="orange">'s lair</small></a>
+	<a href="/" id="logo"><small>r3v</small><span class="blue">M</span>aksiu<small class="orange">'s dragons</small></a>
 	<%BODY%>
 </div>
 	<script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
 	<script src="/static/js:script"></script>
-<div id="footer"><%FOOTER%> [&copy; 2014]</div>
+<div id="footer"><span id="exec-time"><%EXECTIME%>ms</span> [&copy; 2014]</div>
 </body>
 </html>
